--- a/_includes/_about-content.html
+++ b/_includes/_about-content.html
@@ -6,12 +6,19 @@
     <div class="about-text">
         <div class="content-block">
             <p>
-                Hallo, ich bin Maximilian.<br> Als Student der IT-Sicherheit an der Technischen Hochschule Brandenburg und praktizierender Softwareentwickler bewege ich mich an der spannenden Schnittstelle zwischen Code und Sicherheit. Meine Leidenschaft gilt der Entwicklung robuster, sicherer Systeme und dem Verständnis, wie man diese vor externen Bedrohungen schützt.
+                Hallo, ich bin Maximilian.<br><br>
+                Als Student der IT-Sicherheit an der Technischen Hochschule Brandenburg und praktizierender Softwareentwickler bewege ich mich an der spannenden Schnittstelle zwischen Code und Sicherheit. Meine Leidenschaft gilt der Entwicklung robuster, sicherer Systeme und dem Verständnis, wie man diese vor externen Bedrohungen schützt.
             </p>
+
             <p>
-                Dieser Spagat zwischen der kreativen Problemlösung in der Softwareentwicklung und der analytischen, defensiven Denkweise in der IT-Sicherheit ermöglicht mir eine ganzheitliche Sicht auf technologische Produkte.
+                Dieser Spagat zwischen der kreativen Problemlösung in der Softwareentwicklung und der analytischen, defensiven Denkweise in der IT-Sicherheit ermöglicht mir eine ganzheitliche Sicht auf technologische Produkte. Meine Fähigkeiten in den Bereichen <strong>Cloud-Infrastruktur</strong> und <strong>Netzwerksicherheit</strong> untermauere ich durch Zertifikate wie die <strong>Microsoft Azure Fundamentals</strong> und die <strong>CompTIA Security+</strong>.
             </p>
-            <h3>Meine Kernkompetenzen</h3>
+
+            <p>
+                Mein zukünftiger beruflicher Fokus liegt auf den Bereichen <strong>Penetration Testing</strong>, <strong>SOC-Analyse</strong> und <strong>Compliance</strong>, insbesondere im Kontext kritischer Infrastrukturen (<strong>KRITIS</strong>).
+            </p>
+
+            <h3>Meine Kernkompetenzen</h3><br>
             <ul class="tech-stack">
                 <li>C</li>
                 <li>C++</li>
