--- a/_includes/_about-content.html
+++ b/_includes/_about-content.html
@@ -1,4 +1,4 @@
-<div class="about-layout">
+<div class="about-layout fade-in">
     <div class="about-image">
         <img src="images/profilbild.jpg" alt="Profilbild von Maximilian">
     </div>
