--- a/_includes/_projects-gallery.html
+++ b/_includes/_projects-gallery.html
@@ -1,6 +1,6 @@
 <div class="project-grid">
 
-    <a href="https://github.com/mwagner86/trungscendence" target="_blank" class="project-card-link">
+    <a href="https://github.com/mwagner86/trungscendence" target="_blank" class="project-card-link fade-in">
         <article class="project-card">
             <h3>Transcendence</h3>
             <p class="project-description">Ein Echtzeit-Multiplayer-Pong-Spiel mit Chat, Benutzer-Authentifizierung via OAuth und Datenbank-Interaktion.</p>
@@ -14,7 +14,7 @@
         </article>
     </a>
 
-    <a href="https://github.com/mwagner86/42webserv" target="_blank" class="project-card-link">
+    <a href="https://github.com/mwagner86/42webserv" target="_blank" class="project-card-link fade-in">
         <article class="project-card">
             <h3>Webserver in C++</h3>
             <p class="project-description">Ein von Grund auf in C++ geschriebener Webserver, der eine NGINX-ähnliche Konfigurations-Syntax verwendet.</p>
