update to projects

--- a/portfolio/_includes/_projects-gallery.html
+++ b/portfolio/_includes/_projects-gallery.html
@@ -1,9 +1,9 @@
 <div class="project-grid">
 
-    <a href="https://github.com/mwagner86/trungscendence" target="_blank" class="project-card-link fade-in">
+    <a href="https://github.com/mwagner86/ft_transcendence" target="_blank" class="project-card-link fade-in">
         <article class="project-card">
-            <h3>Transcendence</h3>
-            <p class="project-description">Ein Echtzeit-Multiplayer-Pong-Spiel mit Chat, Benutzer-Authentifizierung via OAuth und Datenbank-Interaktion.</p>
+            <h3>ft_transcendence</h3>
+            <p class="project-description">Ein Full-Stack-Projekt: Echtzeit-Multiplayer-Pong mit Chat, OAuth2-Authentifizierung und Anwendungs-Monitoring über einen integrierten ELK Stack.</p>
             <ul class="tech-stack">
                 <li>Django</li>
                 <li>JavaScript</li>
@@ -14,14 +14,43 @@
         </article>
     </a>
 
-    <a href="https://github.com/mwagner86/42webserv" target="_blank" class="project-card-link fade-in">
+    <a href="https://github.com/mwagner86/inception" target="_blank" class="project-card-link fade-in">
         <article class="project-card">
-            <h3>Webserver in C++</h3>
-            <p class="project-description">Ein von Grund auf in C++ geschriebener Webserver, der eine NGINX-ähnliche Konfigurations-Syntax verwendet.</p>
+            <h3>Inception</h3>
+            <p class="project-description">Ein komplettes, containerisiertes Web-Stack-Projekt mit Docker Compose. Es umfasst Nginx, eine WordPress-Seite mit MariaDB-Datenbank und Redis-Caching.</p>
+            <ul class="tech-stack">
+                <li>Docker</li>
+                <li>Docker Compose</li>
+                <li>Nginx</li>
+                <li>WordPress</li>
+                <li>MariaDB</li>
+                <li>Redis</li>
+            </ul>
+        </article>
+    </a>
+
+    <a href="https://github.com/mwagner86/webserv" target="_blank" class="project-card-link fade-in">
+        <article class="project-card">
+            <h3>C++ Webserver</h3>
+            <p class="project-description">Ein von Grund auf in C++98 implementierter, non-blocking HTTP/1.1 Webserver. Verarbeitet parallele Anfragen und nutzt eine NGINX-ähnliche Konfigurationsdatei.</p>
             <ul class="tech-stack">
                 <li>C++</li>
-                <li>Docker</li>
-                <li>Python</li>
+                <li>HTTP/1.1</li>
+                <li>Socket-Programmierung</li>
+                <li>System-Programmierung</li>
+            </ul>
+        </article>
+    </a>
+
+    <a href="https://github.com/mwagner86/cub3d" target="_blank" class="project-card-link fade-in">
+        <article class="project-card">
+            <h3>Cub3D</h3>
+            <p class="project-description">Eine 3D-Spiele-Engine, die mit Raycasting in reinem C implementiert wurde. Inspiriert vom Klassiker Wolfenstein 3D, rendert sie eine 2D-Karte in eine pseudo-3D-Perspektive.</p>
+            <ul class="tech-stack">
+                <li>C</li>
+                <li>Grafik-Programmierung</li>
+                <li>Raycasting</li>
+                <li>MiniLibX</li>
             </ul>
         </article>
     </a>
