--- a/portfolio/_includes/_header.html
+++ b/portfolio/_includes/_header.html
@@ -1,6 +1,11 @@
 <nav class="main-nav">
     <a href="index.html" class="logo">Maximilian Wagner</a>
-    <ul>
+
+    <button id="mobile-menu-toggle" class="mobile-menu-toggle">
+        <span class="hamburger-icon"></span>
+    </button>
+
+    <ul id="main-nav-links" class="main-nav-links">
         <li><a href="index.html#about">Über Mich</a></li>
         <li><a href="projects.html">Projekte</a></li>
         <li><a href="certificates.html">Zertifikate</a></li>
