--- a/portfolio/_includes/_projects-gallery.html
+++ b/portfolio/_includes/_projects-gallery.html
@@ -29,7 +29,7 @@
         </article>
     </a>
 
-    <a href="https://github.com/mwagner86/webserv" target="_blank" class="project-card-link fade-in">
+    <a href="https://github.com/mwagner86/42webserv" target="_blank" class="project-card-link fade-in">
         <article class="project-card">
             <h3>C++ Webserver</h3>
             <p class="project-description">Ein von Grund auf in C++98 implementierter, non-blocking HTTP/1.1 Webserver. Verarbeitet parallele Anfragen und nutzt eine NGINX-ähnliche Konfigurationsdatei.</p>
