--- a/portfolio/_includes/_projects-gallery.html
+++ b/portfolio/_includes/_projects-gallery.html
@@ -1,9 +1,9 @@
 <div class="project-grid">
 
-    <a href="https://github.com/mwagner86/ft_transcendence" target="_blank" class="project-card-link fade-in">
+    <a href="https://github.com/mwagner86/transcendence" target="_blank" class="project-card-link fade-in">
         <article class="project-card">
-            <h3>ft_transcendence</h3>
-            <p class="project-description">Ein Full-Stack-Projekt: Echtzeit-Multiplayer-Pong mit Chat, OAuth2-Authentifizierung und Anwendungs-Monitoring über einen integrierten ELK Stack.</p>
+            <h3>Transcendence</h3>
+            <p class="project-description">Ein Full-Stack-Projekt: Echtzeit-Multiplayer-Pong mit Chat, OAuth2-Authentifizierung und Monitoring über einen containerisierten ELK Stack.</p>
             <ul class="tech-stack">
                 <li>Django</li>
                 <li>JavaScript</li>
